--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "semver": "^5.6.0"
   },
   "main": "dist/index.js",
+  "module": "src/index.js",
   "types": "postcss-selector-parser.d.ts",
   "files": [
     "API.md",
