--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "postcss": "^7.0.7",
     "semver": "^5.6.0"
   },
-  "main": "dist/index.js",
-  "module": "src/index.js",
+  "main": "src/index.js",
   "types": "postcss-selector-parser.d.ts",
   "files": [
     "API.md",
